packages/transpiler/test/fixtures/errors/exponentiation-assign/input.ts
/**
 * @public
 */
export class ExponentAssign {
    public power(a: number, b: number): number {
        let x: number = a;
        x **= b;
        return x;
    }
}
